# metrics-procession

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: events_throughput.rs  realistic_scenarios.rs
examples/: query.rs  serialize.rs  size_of.rs
src/: chunk.rs  event.rs  iter.rs  label_set.rs  lib.rs  procession.rs  recorder.rs
tests/: integration_tests.rs
